--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-.wrapper {
+.wrapperDiv {
     height: 100%;
     display: flex;
     flex-flow: row wrap;
-    padding: 25px 0 50px;
+    padding: 25px 80px 50px;
     justify-content: space-around;
     align-content: flex-start;
 }
