--- a/src/components/ChracterCard/CharacterCard.css
+++ b/src/components/ChracterCard/CharacterCard.css
@@ -1,12 +1,13 @@
 .card {
-    width: 200px;
-    height: 150px;
-    margin: 15px 25px;
+    width: 152px;
+    height: 102px;
+    /* margin: 15px 25px; */
+    margin: 10px 10px 15px 10px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-    border: 3px solid white;
+    border: 1px solid white;
 }
 
 img {
-    width: 200px;
-    height: 150px;
+    width: 150px;
+    height: 100px;
 }
