Placed jumbotron into separate component and imported potential background images

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,7 @@
     justify-content: space-around;
     align-content: flex-start;
 }
+
+.backgroundImg {
+    /* background-image: url("./background_img/"); */
+}
